--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
 <html>
   
   <head>
     <meta name="msvalidate.01" content="077FC8E70423052EB3C59A9A00383AE0" />
   </head>
 
-<h1>HI!</h1>
+  <body>
+    <h1>HI!</h1>
+  </body>
+  
+</html>
